# courseProject

./: .gitignore  README.md
ClientMessenger/: CMakeLists.txt  auth.cpp  auth.h  auth.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
ClientMessenger/build-m_tests-Qt_6_2_4_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
ClientMessenger/build-m_tests-Qt_6_2_4_for_macOS-Debug/.qtc_clangd/: compile_commands.json
ClientMessenger/m_tests/: CMakeLists.txt  main.cpp  tst_m_tests.cpp
ServerMessenger/: CMakeCache.txt  CMakeLists.txt  server.cpp  server.h
docs/ClientDoc/: annotated.html  auth_8cpp.html  auth_8h.html  auth_8h_source.html  class_auth-members.html  class_auth.html  class_main_window-members.html  class_main_window.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  menudata.js  namespace_ui.html  namespaces.html
docs/ClientDoc/search/: all_0.js  all_1.js  all_4.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
docs/ServerDoc/: annotated.html  class_server-members.html  class_server.html  classes.html  dir_3d77ad5a4d1031f78ace135566e00855.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  main_8cpp.html  menudata.js  server_8cpp.html  server_8h.html  server_8h_source.html
docs/ServerDoc/search/: all_0.js  all_2.js  files_1.js  (+3 more)
(+331 files in other folders)
